fix(styles): rename custom properties in dark mode

--- a/src/styles/constants.less
+++ b/src/styles/constants.less
@@ -133,10 +133,10 @@
   --rs-color-bg-error: #fde9ef;
 
   // Misc
-  --rs-color-text-link: var(--rs-color-highlight-7);
-  --rs-color-text-link-hover: var(--rs-color-highlight-8);
-  --rs-color-text-link-active: var(--rs-color-highlight-9);
-  --rs-color-border-primary: var(--rs-color-gray-3);
+  --rs-color-text-link: var(--rs-color-highlight-700);
+  --rs-color-text-link-hover: var(--rs-color-highlight-800);
+  --rs-color-text-link-active: var(--rs-color-highlight-900);
+  --rs-color-border-primary: var(--rs-color-gray-300);
 }
 
 //** Global button ripple switch
