--- a/src/styles/themes/dark/constants.less
+++ b/src/styles/themes/dark/constants.less
@@ -44,32 +44,32 @@
 
 :root {
   // Gray levels
-  --rs-color-gray-0: #e9ebf0;
-  --rs-color-gray-1: #cbced4;
-  --rs-color-gray-2: #a4a9b3;
-  --rs-color-gray-3: #858b94;
-  --rs-color-gray-4: #6a6f76;
-  --rs-color-gray-5: #5c6066;
-  --rs-color-gray-6: #3c3f43;
-  --rs-color-gray-7: #292d33;
-  --rs-color-gray-8: #1a1d24;
-  --rs-color-gray-9: #0f131a;
+  --rs-color-gray-50: #e9ebf0;
+  --rs-color-gray-100: #cbced4;
+  --rs-color-gray-200: #a4a9b3;
+  --rs-color-gray-300: #858b94;
+  --rs-color-gray-400: #6a6f76;
+  --rs-color-gray-500: #5c6066;
+  --rs-color-gray-600: #3c3f43;
+  --rs-color-gray-700: #292d33;
+  --rs-color-gray-800: #1a1d24;
+  --rs-color-gray-900: #0f131a;
 
   // Highlight levels
   --rs-color-highlight: #34c3ff;
-  --rs-color-highlight-0: #f2fcff;
-  --rs-color-highlight-1: #ccf3ff;
-  --rs-color-highlight-2: #a6e9ff;
-  --rs-color-highlight-3: #80ddff;
-  --rs-color-highlight-4: #59d0ff;
-  --rs-color-highlight-5: #34c3ff;
-  --rs-color-highlight-6: #25b3f5;
-  --rs-color-highlight-7: #169de0;
-  --rs-color-highlight-8: #0a81c2;
-  --rs-color-highlight-9: #006199;
+  --rs-color-highlight-50: #f2fcff;
+  --rs-color-highlight-100: #ccf3ff;
+  --rs-color-highlight-200: #a6e9ff;
+  --rs-color-highlight-300: #80ddff;
+  --rs-color-highlight-400: #59d0ff;
+  --rs-color-highlight-500: #34c3ff;
+  --rs-color-highlight-600: #25b3f5;
+  --rs-color-highlight-700: #169de0;
+  --rs-color-highlight-800: #0a81c2;
+  --rs-color-highlight-900: #006199;
 
   // Misc
-  --rs-color-text-link: var(--rs-color-highlight-5);
-  --rs-color-text-link-hover: var(--rs-color-highlight-4);
-  --rs-color-text-link-active: var(--rs-color-highlight-3);
+  --rs-color-text-link: var(--rs-color-highlight-500);
+  --rs-color-text-link-hover: var(--rs-color-highlight-400);
+  --rs-color-text-link-active: var(--rs-color-highlight-300);
 }
